hphp/hack/test/typecheck/const_attribute/non_const_from_trait.php.exp
ERROR: File "non_const_from_trait.php", line 5, characters 1-30:
Classes, interfaces, traits and enums may not be declared `__Const` (Parsing[1002])
ERROR: File "non_const_from_trait.php", line 5, characters 19-19:
Trait declaration of non-const property `p` is incompatible with a const class (Typing[4344])
